refactoring TypeResourceImpl
