# modules/RestBuilder/RestBuilder-impl/src/main/java/restbuilder/internal/resource/v1_0/BaseTypeResourceImpl.java
@@ -75,7 +75,7 @@ public abstract class BaseTypeResourceImpl
 	@Path("/type/all")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "Type")})
-	public Page<Type> getTypesAllPage() throws Exception {
+	public Page<Type> getAllTypes() throws Exception {
 		return Page.of(Collections.emptyList());
 	}
 
@@ -90,7 +90,7 @@ public abstract class BaseTypeResourceImpl
 	@Path("/type/{typeId}")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "Type")})
-	public Type getType(
+	public Type getTypeById(
 			@NotNull @Parameter(hidden = true) @PathParam("typeId") Integer
 				typeId)
 		throws Exception {
@@ -101,15 +101,15 @@ public abstract class BaseTypeResourceImpl
 	/**
 	 * Invoke this method with the command line:
 	 *
-	 * curl -X 'POST' 'http://localhost:8080/o/RestBuilder/v1.0/type/post' -d $'{"id": ___, "name": ___, "tax": ___}' --header 'Content-Type: application/json' -u 'test@liferay.com:test'
+	 * curl -X 'POST' 'http://localhost:8080/o/RestBuilder/v1.0/type/create' -d $'{"id": ___, "name": ___, "tax": ___}' --header 'Content-Type: application/json' -u 'test@liferay.com:test'
 	 */
 	@Consumes({"application/json", "application/xml"})
 	@Override
-	@Path("/type/post")
+	@Path("/type/create")
 	@POST
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "Type")})
-	public Type postTypePost(Type type) throws Exception {
+	public Type createType(Type type) throws Exception {
 		return new Type();
 	}
 
@@ -124,7 +124,7 @@ public abstract class BaseTypeResourceImpl
 	@Path("/type/delete/{typeId}")
 	@Produces({"application/json", "application/xml"})
 	@Tags(value = {@Tag(name = "Type")})
-	public void deleteTypeDeleteType(
+	public void deleteTypeById(
 			@NotNull @Parameter(hidden = true) @PathParam("typeId") Integer
 				typeId)
 		throws Exception {
